# backend_live_canvas

./: .env.dev.example  .env.prod.example  .gitignore  CLAUDE.md  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml
.claude/: api-context.md  openapi.yaml  project-context.md  screen-inventory.md  sdd-roadmap.md
.github/workflows/: ci.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
apps/audit/: admin.py  models.py  services.py
apps/iap/: apps.py
apps/uploads/: apps.py  ffmpeg.py  models.py  serializers.py  services.py  storage.py  tasks.py  urls.py  views.py
apps/wallpapers/: admin.py  admin_serializers.py  admin_services.py  admin_views.py  apps.py  models.py  pagination.py  serializers.py  services.py  urls.py  urls_admin.py  views.py
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
core/: api.py  apps.py  auth_views.py  authentication.py  errors.py  exception_handler.py  pagination.py  permissions.py  urls.py  views.py
core/tests/: test_admin_auth.py  test_app_key_auth.py  test_drf_foundation.py  test_error_envelope.py  test_health.py  test_prod_settings.py  test_settings_flavors.py  test_storage_config.py  test_tier_isolation.py
data/crawl/: manifest.json  video_index.json
requirements/: base.in  base.txt  dev.in  dev.txt  prod.in  prod.txt
scripts/: build_seed_fixture.py
specs/BE-001-project-bootstrap/: data-model.md  plan.md  quickstart.md  (+3 more)
(+50 files in other folders)
